--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -25,7 +25,7 @@ updateJSONURL = "" #optional
 # A URL for the "homepage" for this mod, displayed in the mod UI
 displayURL = "" #optional
 # A file name (in the root of the mod JAR) containing a logo for display
-#logoFile="dialog.png" #optional
+#logoFile="icon.png" #optional
 # A text field displayed in the mod UI
 #credits="Thanks for this example mod goes to Java" #optional
 # A text field displayed in the mod UI
