--- a/.gitignore
+++ b/.gitignore
@@ -119,3 +119,5 @@ runs/
 
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
+/src/generated/resources/.cache/
+/run-data/
